--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@mui/system": "^5.11.5",
     "@mui/x-date-pickers": "^5.0.14",
     "dayjs": "^1.11.7",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.2"
+    "react-router-dom": "^6.6.2",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
